--- a/app/src/main/res/layout/activity_choose_analytic.xml
+++ b/app/src/main/res/layout/activity_choose_analytic.xml
@@ -31,8 +31,9 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
+            android:layout_marginStart="33dp"
             android:layout_marginTop="10dp"
-            android:layout_marginEnd="186dp"
+            android:layout_toEndOf="@+id/backbtn"
             android:text="Choose Analytic"
             android:textColor="#fff"
             android:textSize="24dp"
