--- a/app/src/main/res/layout/activity_today_spending.xml
+++ b/app/src/main/res/layout/activity_today_spending.xml
@@ -33,13 +33,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="10dp"
+                android:layout_marginStart="19dp"
                 android:layout_marginLeft="140dp"
-                android:textSize="24dp"
-                android:layout_marginEnd="186dp"
+                android:layout_marginTop="10dp"
+                android:layout_toEndOf="@+id/backbtn"
                 android:text="Today Spending"
                 android:textColor="#fff"
+                android:textSize="24dp"
                 android:textStyle="bold" />
 
         </RelativeLayout>
