--- a/app/src/main/res/layout/activity_week_spending.xml
+++ b/app/src/main/res/layout/activity_week_spending.xml
@@ -18,23 +18,23 @@
             android:id="@+id/backbtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_back"
             android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
-            android:background="@android:color/transparent"/>
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_back" />
 
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="41dp"
             android:layout_marginLeft="140dp"
-            android:textSize="24dp"
-            android:layout_marginEnd="186dp"
+            android:layout_marginTop="10dp"
+            android:layout_toEndOf="@+id/backbtn"
             android:text="Week Spending"
             android:textColor="#fff"
+            android:textSize="24dp"
             android:textStyle="bold" />
 
     </RelativeLayout>
