--- a/app/src/main/res/layout/activity_monthly_analytics.xml
+++ b/app/src/main/res/layout/activity_monthly_analytics.xml
@@ -23,26 +23,27 @@
                 android:id="@+id/backbtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_back"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="10dp"
-                android:background="@android:color/transparent"/>
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_back" />
 
             <TextView
                 android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="10dp"
+                android:layout_marginStart="32dp"
                 android:layout_marginLeft="140dp"
-                android:textSize="24dp"
-                android:layout_marginEnd="186dp"
+                android:layout_marginTop="11dp"
+                android:layout_toEndOf="@+id/backbtn"
                 android:text="Monthly Analytics"
                 android:textColor="#fff"
+                android:textSize="24dp"
                 android:textStyle="bold" />
 
         </RelativeLayout>
+
         <TextView
             android:id="@+id/totalBudgetAmountTextView"
             android:layout_width="match_parent"
