Improved layout with animations

--- a/app/src/main/res/layout/activity_choose_analytic.xml
+++ b/app/src/main/res/layout/activity_choose_analytic.xml
@@ -12,7 +12,7 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?actionBarSize"
-        android:background="#0024FF">
+        android:background="@drawable/backg">
 
         <!--back btn-->
         <ImageButton
