--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#F2E6F2"
+    android:background="#Fff"
     tools:context=".AccountActivity">
 
     <androidx.appcompat.widget.Toolbar
