--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -349,11 +349,14 @@
                     android:gravity="center"
                     android:orientation="vertical">
 
-                    <ImageView
-                        android:id="@+id/analyticsImageView"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:src="@drawable/ic_anaytic" />
+                    <com.airbnb.lottie.LottieAnimationView
+                        android:id="@+id/animationView5"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        app:lottie_rawRes="@raw/aanalytics"
+                        app:lottie_autoPlay="true"
+                        app:lottie_loop="true"/>
+
 
                     <TextView
                         android:id="@+id/analyticsTextView"
