--- a/app/src/main/res/layout/activity_today_spending.xml
+++ b/app/src/main/res/layout/activity_today_spending.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:orientation="vertical"
     android:layout_height="match_parent"
+    android:background="@drawable/backg"
     tools:context=".TodaySpendingActivity">
 
 
@@ -16,7 +17,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
-            android:background="#0024FF">
+            android:background="@drawable/backg">
 
             <!--back btn-->
             <ImageButton
@@ -49,7 +50,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="TotalAmount: ₹0"
-            android:textColor="#0D0D0D"
+            android:textColor="#FFFFFF"
             android:textSize="20sp"
             android:textStyle="bold"
             android:gravity="center"
@@ -77,7 +78,7 @@
                 android:layout_gravity="bottom|end"
                 app:fabSize="normal"
                 android:id="@+id/fab"
-                app:backgroundTint="#000"
+                app:backgroundTint="#FFB300"
                 android:src="@drawable/ic_add"
                 android:layout_margin="16dp"/>
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
