--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,71 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
-    android:background="#fff"
-    android:layout_margin="20dp"
-    tools:context=".LoginActivity">
-
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/animation_view"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.469"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
-        app:lottie_rawRes="@raw/expense" />
+    tools:context=".LoginActivity"
+    android:overScrollMode="never"
+    android:background="#27023e"
+    android:scrollbars="none"
+    android:clipToPadding="false"
+    >
 
 
-    <EditText
-        android:id="@+id/email"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter Email"
-        android:textColor="#000"
-        android:textSize="20sp"
-        android:layout_margin="5dp"
-        android:inputType="textEmailAddress"
-        android:textColorHint="#000"
-        />
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="Enter password"
-        android:textColor="#000"
-        android:layout_margin="5dp"
-        android:inputType="textPassword"
-        android:textSize="20sp"
-        android:textColorHint="#000"
-        />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="@dimen/_19sdp"
 
-    <Button
-        android:id="@+id/loginBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAllCaps="false"
-        android:textColor="#fff"
-        android:textSize="24dp"
-        android:background="@color/colorPrimaryDark"
-        android:layout_margin="5dp"
-        android:text="Login"/>
-
-    <TextView
-        android:id="@+id/loginQn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Dont have an account, signUp"
-        android:gravity="center"/>
+            android:layout_marginTop="@dimen/_27sdp"
+            android:fontFamily="@font/pacifico"
+            android:gravity="center_vertical"
+            android:lineHeight="@dimen/_39sdp"
 
 
+            android:text="@string/welcome_back"
+            android:textAppearance="@style/welcome_back"
+            android:textSize="@dimen/_30ssp" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/_19sdp"
+            android:layout_marginTop="@dimen/_5sdp"
+            android:fontFamily="@font/montserrat"
+            android:gravity="center_vertical"
+            android:text="@string/login_to_c"
+            android:textAppearance="@style/login_to_c" />
+
+        <EditText
+            android:id="@+id/email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_16sdp"
+            android:layout_marginTop="@dimen/_45sdp"
+            android:layout_marginRight="@dimen/_16sdp"
+            android:background="@drawable/background_input"
+            android:hint="E-mail"
+            android:imeOptions="actionNext"
+            android:importantForAutofill="no"
+            android:inputType="textEmailAddress"
+            android:minHeight="48dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="@dimen/_16sdp"
+            android:textColor="@color/primary_text"
+            android:textColorHint="@color/secondary_text" />
 
 
-</LinearLayout>
+        <EditText
+            android:id="@+id/password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_16sdp"
+            android:layout_marginTop="@dimen/_15sdp"
+            android:layout_marginRight="@dimen/_16sdp"
+            android:background="@drawable/background_input"
+            android:hint="Password"
+            android:imeOptions="actionDone"
+            android:importantForAutofill="no"
+            android:inputType="textPassword"
+            android:minHeight="48dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="@dimen/_16sdp"
+            android:textColor="@color/primary_text"
+            android:textColorHint="@color/secondary_text"
+            android:textSize="@dimen/_13ssp" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/loginBtn"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/_50sdp"
+            android:layout_marginLeft="@dimen/_16sdp"
+            android:layout_marginTop="@dimen/_20sdp"
+            android:layout_marginRight="@dimen/_16sdp"
+
+            android:backgroundTint="@color/button"
+
+            app:strokeWidth="@dimen/_1sdp"
+            app:strokeColor="@color/stroke_button"
+            android:fontFamily="@font/montserrat"
+            android:text="Log In"
+            android:textColor="@color/white"
+            android:textFontWeight="500"
+            android:textSize="@dimen/_20ssp"
+
+            app:cornerRadius="10dp"/>
+
+        <TextView
+            android:id="@+id/loginQn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/_18sdp"
+            android:text="@string/new_here_create_account"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+
+
+    </LinearLayout>
+
+
+
+</ScrollView>
