--- a/app/src/main/res/layout/activity_second_screen.xml
+++ b/app/src/main/res/layout/activity_second_screen.xml
@@ -28,35 +28,38 @@
             app:layout_constraintStart_toStartOf="@+id/imageView10"
             app:srcCompat="@drawable/vaults2" />
 
-        <TextView
-            android:id="@+id/textView24"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="540dp"
-            android:fontFamily="@font/montserrat"
-            android:text="@string/welcome_desc"
-            android:textColor="#27023E"
-            android:textSize="36sp"
-            android:textStyle="bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imageView9" />
+    <TextView
+        android:id="@+id/textView24"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="532dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/montserrat"
+        android:text="Track all your expenses with just a tap!"
+        android:textAlignment="center"
+        android:textColor="#27023E"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView9" />
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/signups2"
-            android:layout_width="@dimen/_130sdp"
-            android:layout_height="@dimen/_50sdp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="692dp"
-            app:cornerRadius="@dimen/_8sdp"
-            android:backgroundTint="@color/white"
-            android:text="SIGN UP"
-            android:textColor="@color/bgm_main"
-            android:textSize="@dimen/_20ssp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imageView9"
-            app:strokeColor="@color/bgm_main"
-            app:strokeWidth="4dp" />
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/signups2"
+        android:layout_width="@dimen/_130sdp"
+        android:layout_height="@dimen/_50sdp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="@color/white"
+        android:text="SIGN UP"
+        android:textColor="@color/bgm_main"
+        android:textSize="@dimen/_20ssp"
+        app:cornerRadius="@dimen/_8sdp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView10"
+        app:strokeColor="@color/bgm_main"
+        app:strokeWidth="4dp" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/logins2"
