--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -382,7 +382,7 @@
                 android:layout_gravity="fill"
                 android:layout_margin="8dp"
                 android:background="#fff"
-                android:visibility="invisible"
+                android:visibility="visible"
                 app:cardCornerRadius="10dp"
                 app:cardElevation="8dp">
 
@@ -393,15 +393,18 @@
                     android:gravity="center"
                     android:orientation="vertical">
 
-                    <ImageView
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:src="@drawable/ic_history" />
+                    <com.airbnb.lottie.LottieAnimationView
+                        android:id="@+id/animationView6"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        app:lottie_autoPlay="true"
+                        app:lottie_loop="true"
+                        app:lottie_rawRes="@raw/receipt" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="History"
+                        android:text="Receipts"
                         android:textAlignment="center"
                         android:textColor="#000"
                         android:textStyle="bold" />
@@ -412,13 +415,13 @@
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
-            android:visibility="invisible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="16dp"
-            android:backgroundTint="#000"
+            android:backgroundTint="#ED0D0D"
             android:src="@drawable/ic_add"
+            android:visibility="invisible"
             app:fabSize="normal" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
