Fixing bugs in RegistrationActivity.java

--- a/app/src/main/res/layout/activity_weekly_analytics.xml
+++ b/app/src/main/res/layout/activity_weekly_analytics.xml
@@ -48,7 +48,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:text="L 50 %"
+                android:text="L=50 %"
                 android:layout_gravity="center_vertical"
                 android:textSize="12sp"
                 android:textColor="#000"
@@ -80,7 +80,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:text="G 100 %"
+                android:text="G=100 %"
                 android:layout_gravity="center_vertical"
                 android:textSize="12sp"
                 android:textColor="#000"
